deps/v8/test/message/regress/fail/regress-crbug-842101.out
# Copyright 2018 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:5: TypeError: 'set' on proxy: trap returned truish for property 'bla' which exists in the proxy target as a non-configurable and non-writable data property with a different value
function set_value(obj, prop) { return obj[prop] = undefined }
                                                 ^
TypeError: 'set' on proxy: trap returned truish for property 'bla' which exists in the proxy target as a non-configurable and non-writable data property with a different value
    at set_value (*%(basename)s:5:50)
    at *%(basename)s:18:1
